@@ -4,6 +4,7 @@
 * Internal functions renamed
 * `doplot` function renamed to `buildBasicChart`
 * `adiabSat` function returns a `psychro`-like-output
+* `psychro` and `adiabSat` accept temperature input and output both in K and in °C
 * `loadCoeffs.jl` file removed and experimental coefficients transferred to the main model file (thanks to Leo Weegels)
 * `newtonraphson` function replaced by `Roots.find_zero` (thanks to Leo Weegels)
 * Nested functions replaced by anonymous functions
